--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libtext-wrapi18n-perl (0.06-7.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Fix "FTBFS with perl 5.22 in experimental (MakeMaker changes)":
+    use DESTDIR in debian/rules.
+    (Closes: #795629)
+
+ -- gregor herrmann <gregoa@debian.org>  Wed, 26 Aug 2015 18:12:58 +0200
+
 libtext-wrapi18n-perl (0.06-7) unstable; urgency=low
 
   * Fix infinite loop in Text::WrapI18N
