--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-7pexip2) pexip; urgency=low
+
+  * No-change rebuild
+
+ -- John-Mark Bell <jmb@pexip.com>  Sun, 16 Apr 2017 23:24:17 +0100
+
 libtext-wrapi18n-perl (0.06-7pexip1) pexip; urgency=low
 
   * Prepare Pexip packaging
