--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-7.1pexip1) pexip; urgency=medium
+
+  * Migrate to Stretch
+
+ -- John-Mark Bell <jmb@pexip.com>  Tue, 10 Jul 2018 00:20:00 +0000
+
 libtext-wrapi18n-perl (0.06-7.1) unstable; urgency=medium
 
   * Non-maintainer upload.
