Main bullseye build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-9pexip2) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 13:56:02 +0100
+
 libtext-wrapi18n-perl (0.06-9pexip1) pexip; urgency=medium
 
   * Initial bullseye build
