Bullseye rebuild for ARM64 inclusion

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-9pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:32:32 +0100
+
 libtext-wrapi18n-perl (0.06-9pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
