--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-10pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:08:07 +0000
+
 libtext-wrapi18n-perl (0.06-10) unstable; urgency=medium
 
   [ Debian Janitor ]
