--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-10pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:55:23 +0000
+
 libtext-wrapi18n-perl (0.06-10pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
