--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtext-wrapi18n-perl (0.06-10+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:07:35 +0000
+
 libtext-wrapi18n-perl (0.06-10pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
